objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATSPayment__Address__c</fullName>
        <label>iATS - Address</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__City__c</fullName>
        <label>iATS - City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Country__c</fullName>
        <label>iATS - Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Email__c</fullName>
        <label>iATS - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Fax__c</fullName>
        <label>iATS - Fax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__First_Name__c</fullName>
        <description>IATSPayments First Name</description>
        <label>iATS - First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Item_10_Label__c</fullName>
        <label>iATS - Item 10 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Item_10__c</fullName>
        <label>iATS - Item 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Item_11_Label__c</fullName>
        <label>iATS - Item 11 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Item_11__c</fullName>
        <label>iATS - Item 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Item_12_Label__c</fullName>
        <label>iATS - Item 12 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Item_12__c</fullName>
        <label>iATS - Item 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Title__c</fullName>
        <label>iATS - Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Item1__c</fullName>
        <label>iATS - Item 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Item2__c</fullName>
        <label>iATS - Item 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Item3__c</fullName>
        <label>iATS - Item 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Last_Name__c</fullName>
        <label>iATS - Last Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Phone1__c</fullName>
        <label>iATS - Home Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Phone2__c</fullName>
        <label>iATS - Mobile Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__State__c</fullName>
        <label>iATS - State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Total_Approved_Transactions__c</fullName>
        <inlineHelpText>Do not edit. Will automatically update. IATS Brickwork field.</inlineHelpText>
        <label>Total Amount of Approved Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Total_Number_of_Approved_Transactions__c</fullName>
        <inlineHelpText>Do not edit. Will automatically update. IATS Brickwork field.</inlineHelpText>
        <label>Total Number of Approved Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Total_Number_of_Rejected_Transactions__c</fullName>
        <inlineHelpText>Do not edit. Will automatically update. IATS Brickwork field.</inlineHelpText>
        <label>Total Number of Rejected Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Zip_Code__c</fullName>
        <label>iATS - Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__iATS_Company_Name__c</fullName>
        <label>iATS - Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>